--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -34,9 +34,11 @@
     color: var(--gray-700);
   }
 
-  span {
+  .number-of-questions {
     margin-left: 16px;
     border-radius: 9999px;
+    background-color: var(--purple-400);
+    color: var(--white-50);
     padding: 8px 16px;
     font-weight: 500;
     font-size: 14px;
@@ -59,8 +61,10 @@
       justify-content: space-between;
       align-items: center;
       margin-top: 16px;
-      
+
       span {
+        padding: 0px;
+        margin-left: 0px;
         font-size: 14px;
         color: var(--gray-600);
         font-weight: 500;
@@ -74,6 +78,24 @@
           &:hover {
             text-decoration: underline;
           }
+        }
+      }
+
+      .user-info {
+        display: flex;
+        align-items: center;
+
+        img {
+          width: 32px;
+          height: 32px;
+          border-radius: 9999px;
+        }
+
+        span {
+          margin-left: 8px;
+          color: var(--gray-700);
+          font-weight: 500;
+          font-size: 14px;
         }
       }
     }
