--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -20,6 +20,10 @@
   main {
     max-width: 800px;
     margin: 0 auto;
+
+    .questions-list {
+      margin-top: 32px;
+    }
   }
 
   .room-title {
