--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -15,6 +15,17 @@
     img {
       max-height: 45px;
     }
+
+    > div {
+      display: flex;
+      align-items: center;
+      gap: 16px;
+
+      button {
+        height: 40px;
+
+      }
+    }
   }
 
   main {
