--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -2,8 +2,10 @@
   --white-50: #ffffff;
   --white-75: #fefefe;
   --white-100: #e2e2e2;
+  --white-150: #f4f0ff;
   --white-200: #f8f8f8;
 
+  --gray-400: #dbdcdd;
   --gray-500: #a8a8b3;
   --gray-600: #737380;
   --gray-700: #29292e;
