--- a/src/styles/questions.scss
+++ b/src/styles/questions.scss
@@ -8,6 +8,23 @@
     margin-top: 8px;
   }
 
+  &.answered {
+    background-color: var(--gray-400);
+
+    .question-user-info span {
+      color: var(--gray-700);
+    }
+  }
+
+  &.highlighted {
+    background-color: var(--white-150);
+    border: 1px solid var(--purple-500);
+
+    .question-user-info span {
+      color: var(--gray-700);
+    }
+  }
+
   p {
     color: var(--gray-700);
   }
@@ -57,6 +74,28 @@
         margin-left: 8px;
         color: var(--gray-600);
         font-size: 14px;
+      }
+    }
+  }
+
+  .question-children {
+    display: flex;
+    gap: 16px;
+  }
+
+  .answerButton {
+    &.answeredButton {
+      svg path,
+      svg circle {
+        stroke: var(--purple-500);
+      }
+    }
+  }
+
+  .highlightButton {
+    &.highlightedButton {
+      svg path {
+        stroke: var(--purple-500);
       }
     }
   }
